// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FontIcon renders FontIcon correctly 1`] = `
<i
  aria-hidden={true}
  className=
      ms-Icon
      {
        display: inline-block;
      }
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: "FabricMDL2Icons-2";
        font-style: normal;
        font-weight: normal;
        speak: none;
      }
  data-icon-name="CompassNW"
  style={
    Object {
      "fontFamily": "\\"FabricMDL2Icons-2\\"",
    }
  }
>
  
</i>
`;

exports[`FontIcon renders FontIcon with children correctly 1`] = `
<i
  aria-hidden={true}
  className=
      ms-Icon
      {
        display: inline-block;
      }
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: "FabricMDL2Icons";
        font-style: normal;
        font-weight: normal;
        speak: none;
      }
  data-icon-name="Upload"
  style={
    Object {
      "fontFamily": "\\"FabricMDL2Icons\\"",
    }
  }
>
  
</i>
`;

exports[`FontIcon renders named FontIcon correctly 1`] = `
<i
  aria-label="compass"
  className=
      ms-Icon
      {
        display: inline-block;
      }
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: "FabricMDL2Icons-2";
        font-style: normal;
        font-weight: normal;
        speak: none;
      }
  data-icon-name="CompassNW"
  role="img"
  style={
    Object {
      "fontFamily": "\\"FabricMDL2Icons-2\\"",
    }
  }
>
  
</i>
`;
